--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./build/main.css" />
+    <link rel="stylesheet" href="./main.css" />
 
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
