--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
           >intro-section-with-dropdown-navigation-main</a
         >
       </li>
+      <li>
+        <a href="./advice-generator-app-main/index.html"
+          >advice-generator-app-main</a
+        >
+      </li>
     </ul>
   </body>
 </html>
