update css main border-radius property

--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -141,6 +141,7 @@
 
         main {
           padding: 1.5rem clamp(1.5rem, 1rem + 3vw, 3rem);
+          border-radius: clamp(0.5rem, 2vw, 1rem);
         }
 
         h1 {
